--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /tmp
 /out-tsc
 
+# Dependencies
 /node_modules
 npm-debug.log*
 yarn-debug.log*
@@ -8,4 +9,40 @@ yarn-error.log*
 /.pnp
 .pnp.js
 
+# Build output
+/dist
+*.tsbuildinfo
+
+# Cache
+.cache
+.vite
+*.local
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+logs/
+
+# Testing
+coverage/
+*.test.js.snap
+
+# IDE
 .vscode/*
+!.vscode/extensions.json
+.idea/*
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
