--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "chzzk-replay-repeat",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {},
   "devDependencies": {
-    "typescript": "^5.5.3"
+    "@crxjs/vite-plugin": "^2.2.1",
+    "@tailwindcss/postcss": "^4.1.17",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.5.3",
+    "vite": "^7.2.2"
   },
   "private": true
 }
